--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -1,6 +1,7 @@
 :root {
   --text-color: #212121;
   --background-main: #fff;
+  --white-color: #fff;
   --background-footer: #2f303a;
   --excretion-color: #2196f3;
   --background-fon: #f5f4fa;
