--- a/css/main.css
+++ b/css/main.css
@@ -953,7 +953,7 @@ body {
   font-weight: 700;
   line-height: 1.14;
   text-transform: uppercase;
-  color: var(--background-main);
+  color: var(--white-color);
   transform: translateY(100%);
   transition-property: transform;
   transition-duration: 250ms;
@@ -1036,7 +1036,7 @@ body {
 }
 
 @media screen and (min-width: 768px) {
-  .employee__item:nth-child(n+3) {
+  .employee__item:nth-child(n + 3) {
     margin-bottom: 0;
   }
 }
@@ -1086,7 +1086,7 @@ body {
 
 .employee__link:hover, .employee__link:focus {
   background-color: var(--excretion-color);
-  fill: var(--background-main);
+  fill: var(--white-color);
 }
 
 .employee__icon-list:not(:last-child) {
@@ -1099,7 +1099,7 @@ body {
 }
 
 .employee .card {
-  background-color: var(--background-main);
+  background-color: var(--white-color);
 }
 
 .clients {
@@ -1409,7 +1409,7 @@ body {
   font-weight: 400;
   line-height: 1.55;
   letter-spacing: 0.03em;
-  color: var(--background-main);
+  color: var(--white-color);
 }
 
 .projects__card--shadow {
@@ -1546,7 +1546,7 @@ body {
   font-weight: 700;
   letter-spacing: 0.06em;
   background-color: var(--excretion-color);
-  color: var(--background-main);
+  color: var(--white-color);
   border-color: var(--excretion-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
@@ -1708,7 +1708,7 @@ body {
 }
 
 .footer-icons {
-  fill: var(--background-main);
+  fill: var(--white-color);
 }
 
 .footer__item:not(:last-child) {
@@ -1742,7 +1742,7 @@ body {
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: var(--background-main);
+  color: var(--white-color);
 }
 
 @media screen and (min-width: 1200px) {
@@ -1760,7 +1760,7 @@ body {
   margin-top: 20px;
   margin-bottom: 20px;
   background-color: var(--background-footer);
-  color: var(--background-main);
+  color: var(--white-color);
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -1792,7 +1792,7 @@ body {
   font-weight: 700;
   letter-spacing: 0.06em;
   background-color: var(--excretion-color);
-  color: var(--background-main);
+  color: var(--white-color);
   border-color: var(--excretion-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
