--- a/sass/layout/_what-we-do.scss
+++ b/sass/layout/_what-we-do.scss
@@ -45,7 +45,7 @@
   font-weight: 700;
   line-height: 1.14;
   text-transform: uppercase;
-  color: var(--background-main);
+  color: var(--white-color);
   transform: translateY(100%);
   transition-property: transform;
   transition-duration: 250ms;
