--- a/sass/layout/_employee.scss
+++ b/sass/layout/_employee.scss
@@ -3,10 +3,9 @@
   padding-bottom: 60px;
   padding-top: 60px;
 
-  @media screen and (min-width:1200px) {
-  padding-bottom: 94px;
-  padding-top: 94px;
-    
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 94px;
+    padding-top: 94px;
   }
 }
 
@@ -30,7 +29,7 @@
   font-size: 28px;
   line-height: 1.17;
 
-  @media screen and (min-width:1200px) {
+  @media screen and (min-width: 1200px) {
     font-size: 36px;
     margin-bottom: 50px;
   }
@@ -42,49 +41,46 @@
   font-size: 16px;
   line-height: 1.2;
 
-    @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
-  } 
+  }
 }
 
 .employee__item {
-    width: 100%;
+  width: 100%;
   margin-bottom: 30px;
 
   @media screen and (min-width: 768px) {
     flex-basis: calc((100% - 30px) / 2);
   }
 
-    @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1200px) {
     flex-basis: calc((100% - 90px) / 4);
     margin-bottom: 0;
   }
 }
 
-.employee__item:nth-child(n+3){
-  
- @media screen and (min-width: 768px) {
-   margin-bottom: 0;
- }
+.employee__item:nth-child(n + 3) {
+  @media screen and (min-width: 768px) {
+    margin-bottom: 0;
+  }
 }
 
-.employee__item:not(:nth-child(2n)){
-  
- @media screen and (min-width: 768px) {
-   margin-right: 30px;
- }
+.employee__item:not(:nth-child(2n)) {
+  @media screen and (min-width: 768px) {
+    margin-right: 30px;
+  }
 }
 
 .employee__item:not(:last-child) {
-
- @media screen and (min-width: 480px) {
+  @media screen and (min-width: 480px) {
     // margin-right: 30px;
-    }
+  }
 
- @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1200px) {
     margin-right: 30px;
-    }
+  }
 }
 
 .card-text {
@@ -120,7 +116,7 @@
   &:hover,
   &:focus {
     background-color: var(--excretion-color);
-    fill: var(--background-main);
+    fill: var(--white-color);
   }
 }
 
@@ -134,5 +130,5 @@
 }
 
 .employee .card {
-  background-color: var(--background-main);
+  background-color: var(--white-color);
 }
