--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,21 +3,20 @@
   padding-bottom: 60px;
   background-color: var(--background-footer);
 
-@media screen and (min-width:1200px){
-  padding-bottom: 0;
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 0;
+  }
 }
-}
-
 
 .footer__block {
   align-items: baseline;
 
-  @media screen and (min-width:768px) {
+  @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
   }
-  @media screen and (min-width:1200px) {
+  @media screen and (min-width: 1200px) {
     flex-wrap: nowrap;
     align-items: baseline;
   }
@@ -26,10 +25,10 @@
 .footer-social-links {
   text-align: center;
   padding-bottom: 60px;
-  
-  @media screen and (min-width:1200px) {
-     margin-left: 70px;
-   }
+
+  @media screen and (min-width: 1200px) {
+    margin-left: 70px;
+  }
 }
 
 .footer__subtitle {
@@ -73,7 +72,6 @@
   margin-bottom: 60px;
 }
 
-
 .footer__contacts--white {
   color: #fff;
 }
@@ -83,7 +81,7 @@
 }
 
 .footer-icons {
-  fill: var(--background-main);
+  fill: var(--white-color);
 }
 
 .footer__item:not(:last-child) {
@@ -99,11 +97,10 @@
   width: 100%;
   height: 86px;
 
-@media screen and (min-width:1200px){
-  flex-direction: row;
-  align-items: flex-end;
-}
-
+  @media screen and (min-width: 1200px) {
+    flex-direction: row;
+    align-items: flex-end;
+  }
 }
 
 .footer__form-fild {
@@ -118,9 +115,9 @@
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: var(--background-main);
+  color: var(--white-color);
 
-  @media screen and (min-width:1200px){
+  @media screen and (min-width: 1200px) {
     text-align: left;
   }
 }
@@ -134,19 +131,19 @@
   margin-top: 20px;
   margin-bottom: 20px;
   background-color: var(--background-footer);
-  color: var(--background-main);
+  color: var(--white-color);
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
 
-  @media screen and (min-width:480px) {
+  @media screen and (min-width: 480px) {
     width: 450px;
   }
 
-   @media screen and (min-width:1200px) {
-     width: 358px;
-   }
+  @media screen and (min-width: 1200px) {
+    width: 358px;
+  }
 }
 
 .footer__button {
@@ -162,7 +159,7 @@
   font-weight: 700;
   letter-spacing: 0.06em;
   background-color: var(--excretion-color);
-  color: var(--background-main);
+  color: var(--white-color);
   border-color: var(--excretion-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
@@ -191,7 +188,7 @@
     background: #188ce8;
   }
 
-  @media screen and (min-width:1200px){
+  @media screen and (min-width: 1200px) {
     margin-bottom: 20px;
   }
 }
