--- a/sass/layout/_form.scss
+++ b/sass/layout/_form.scss
@@ -98,7 +98,7 @@
   font-weight: 700;
   letter-spacing: 0.06em;
   background-color: var(--excretion-color);
-  color: var(--background-main);
+  color: var(--white-color);
   border-color: var(--excretion-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
