--- a/sass/layout/_projects.scss
+++ b/sass/layout/_projects.scss
@@ -1,8 +1,8 @@
 .projects {
-padding-bottom: 60px;
+  padding-bottom: 60px;
 
-  @media screen and (min-width:1200px) {
-  padding-bottom: 94px;
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 94px;
   }
 }
 
@@ -15,47 +15,42 @@ padding-bottom: 60px;
   //   flex-basis: calc((100% - 30px) / 2);
   // }
 
-   @media screen and (max-width:767px){
-  flex-direction: column;
-align-items: center;
-}
- @media screen and (min-width:768px){
-flex-wrap:wrap;
+  @media screen and (max-width: 767px) {
+    flex-direction: column;
+    align-items: center;
+  }
+  @media screen and (min-width: 768px) {
+    flex-wrap: wrap;
   }
 }
 
-.projects__item{
-
-  @media screen and (max-width:1200px){
-  flex-basis: calc((100% - 30px) / 2);
+.projects__item {
+  @media screen and (max-width: 1200px) {
+    flex-basis: calc((100% - 30px) / 2);
   }
 }
-
 
 .projects__item:not(:nth-child(2n)) {
-
-  @media screen and (min-width:768px) and (max-width:1200px) {
+  @media screen and (min-width: 768px) and (max-width: 1200px) {
     margin-right: 30px;
   }
 }
 
-.projects__item:not(:last-child){
+.projects__item:not(:last-child) {
   margin-bottom: 30px;
 }
 
 .projects__item:not(:nth-child(3n)) {
-
-  @media screen and (min-width:1200px) {
+  @media screen and (min-width: 1200px) {
     margin-right: 30px;
   }
 }
 
 .projects__item:not(:nth-last-child(-n + 3)) {
-  @media screen and (min-width:1200px) {
-  margin-bottom: 30px;
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 30px;
+  }
 }
-}
-
 
 .projects__card {
   position: relative;
@@ -97,22 +92,21 @@ flex-wrap:wrap;
 
 .project__card-setting {
   position: absolute;
-   @media screen and(max-width:479px){
-width: 100%;
-height: 100%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  padding: 0 10px 10px 10px;
-}
-  @media screen and(min-width:480px) {
-     width: 322px;
-  height: 168px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  @media screen and(max-width:479px) {
+    width: 100%;
+    height: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 0 10px 10px 10px;
   }
- 
+  @media screen and(min-width:480px) {
+    width: 322px;
+    height: 168px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
 
 .projects__description {
@@ -120,7 +114,7 @@ height: 100%;
   font-weight: 400;
   line-height: 1.55;
   letter-spacing: 0.03em;
-  color: var(--background-main);
+  color: var(--white-color);
 }
 
 .projects__card--shadow {
