--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -2,9 +2,9 @@
   padding-top: 60px;
   padding-bottom: 60px;
 
-  @media screen and (min-width:1200px) {
+  @media screen and (min-width: 1200px) {
     padding-bottom: 94px;
-  padding-top: 94px;
+    padding-top: 94px;
   }
 }
 
@@ -16,7 +16,7 @@
   font-size: 28px;
   line-height: 1.17;
 
-  @media screen and (min-width:1200px) {
+  @media screen and (min-width: 1200px) {
     margin-bottom: 50px;
     font-size: 36px;
   }
@@ -24,13 +24,13 @@
 
 .clients-list {
   text-align: -webkit-center;
-  
-  @media screen and (min-width:480px) {
+
+  @media screen and (min-width: 480px) {
     display: flex;
     flex-wrap: wrap;
   }
 
-  @media screen and (min-width:768px) {
+  @media screen and (min-width: 768px) {
     justify-content: center;
   }
 }
@@ -39,7 +39,7 @@
   display: flex;
   border: 1px solid var(--social-icon-color);
   border-radius: 4px;
-  width: 170px;
+  // width: 170px;
   height: 92px;
   align-items: center;
   justify-content: center;
@@ -52,45 +52,60 @@
     fill: var(--excretion-color);
     border-color: var(--excretion-color);
   }
+
+  @media screen and (max-width: 479px) {
+    width: 170px;
+  }
+
+  @media screen and(min-width:1200px) {
+    width: 170px;
+  }
 }
-.clients__item:not(:nth-child(3n)){
-   @media screen and (min-width: 768px) {
-   margin-right: 30px;
- }
+
+.clients__item:not(:nth-child(2n)) {
+  @media screen and (min-width: 480px) and (max-width: 767px) {
+    margin-right: 30px;
+  }
+}
+
+.clients__item:not(:nth-child(3n)) {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin-right: 30px;
+  }
 }
 
 .clients__item:not(:last-child) {
-  // margin-right: 30px;
-    @media screen and (max-width:1200px) {
-      margin-bottom: 30px;
-    }
-    @media screen and (min-width:1200px){
-    margin-right: 30px;    
+  @media screen and (max-width: 479px) {
+    margin-bottom: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-right: 30px;
   }
 }
 
-.clients__item{
-  
-    @media screen and (max-width: 768px) {
+.clients__item {
+  @media screen and (max-width: 767px) {
     flex-basis: calc((100% - 30px) / 2);
   }
-   @media screen and (min-width:1200px){
-    margin-bottom: 0; 
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    flex-basis: calc((100% - 60px) / 3);
+  }
 }
-.clients__item:nth-child(n+5){
-  
- @media screen and (min-width: 480px) {
-   margin-bottom: 0;
- }
-}
+//   @media screen and (min-width: 1200px) {
+//     margin-bottom: 0;
+//   }
 
-.clients__item:nth-child(n+3){
-  
-  @media screen and (min-width: 768px) {
-    margin-bottom: 0;
+.clients__item:not(:nth-child(n + 5)) {
+  @media screen and (max-width: 767px) {
+    margin-bottom: 30px;
   }
 }
 
+.clients__item:not(:nth-child(n + 3)) {
+  @media screen and(min-width:768px) and (max-width: 1199px) {
+    margin-bottom: 30px;
+  }
+}
 
 .company-logo {
   width: 106px;
@@ -104,5 +119,4 @@
     fill: var(--excretion-color);
     border-color: var(--excretion-color);
   }
-}
 }
