--- a/sass/layout/_employee.scss
+++ b/sass/layout/_employee.scss
@@ -49,7 +49,7 @@
 
 .employee__item {
   width: 100%;
-  margin-bottom: 30px;
+  // margin-bottom: 30px;
 
   @media screen and (min-width: 768px) {
     flex-basis: calc((100% - 30px) / 2);
@@ -57,13 +57,12 @@
 
   @media screen and (min-width: 1200px) {
     flex-basis: calc((100% - 90px) / 4);
-    margin-bottom: 0;
   }
 }
 
-.employee__item:nth-child(n + 3) {
-  @media screen and (min-width: 768px) {
-    margin-bottom: 0;
+.employee__item:not(:nth-child(n + 3)) {
+  @media screen and (max-width: 1199px) {
+    margin-bottom: 30px;
   }
 }
 
@@ -74,10 +73,9 @@
 }
 
 .employee__item:not(:last-child) {
-  @media screen and (min-width: 480px) {
-    // margin-right: 30px;
+  @media screen and (max-width: 767px) {
+    margin-bottom: 30px;
   }
-
   @media screen and (min-width: 1200px) {
     margin-right: 30px;
   }
