--- a/sass/layout/_featur.scss
+++ b/sass/layout/_featur.scss
@@ -3,8 +3,8 @@
   padding-bottom: 60px;
 
   @media screen and (min-width: 1200px) {
-     padding-top: 94px;
-  padding-bottom: 94px;
+    padding-top: 94px;
+    padding-bottom: 94px;
   }
 }
 
@@ -25,35 +25,32 @@
     flex-basis: calc((100% - 30px) / 2);
   }
 
-    @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1200px) {
     flex-basis: calc((100% - 90px) / 4);
+    margin-bottom: 0;
   }
 }
 
-// .featur__item:nth-child(n+3){
-  
-//  @media screen and (min-width: 768px) {
-//    margin-bottom: 0;
-//  }
-// }
+.featur__item:not(:nth-child(n + 3)) {
+  @media screen and (max-width: 1200px) {
+    margin-bottom: 30px;
+  }
+}
 
-.featur__item:not(:nth-child(2n)){
-  
- @media screen and (min-width: 768px) {
-   margin-right: 30px;
- }
+.featur__item:not(:nth-child(2n)) {
+  @media screen and (min-width: 768px) {
+    margin-right: 30px;
+  }
 }
 
 .featur__item:not(:last-child) {
-  // margin-right: 30px;
-  margin-bottom: 30px;
-
-    @media screen and (min-width: 1200px) {
+  @media screen and (max-width: 767px) {
+    margin-bottom: 30px;
+  }
+  @media screen and (min-width: 1200px) {
     margin-right: 30px;
-    }
+  }
 }
-
-
 
 .featur__title {
   margin: 0;
