--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -24,7 +24,7 @@
 
 .footer-social-links {
   text-align: center;
-  padding-bottom: 60px;
+  // padding-bottom: 60px;
 
   @media screen and (min-width: 1200px) {
     margin-left: 70px;
@@ -44,7 +44,7 @@
   display: flex;
   justify-content: center;
   margin-top: 16px;
-  margin-bottom: 60px;
+  // margin-bottom: 60px;
 }
 
 .footer__link {
@@ -69,7 +69,7 @@
 .footer__address {
   font-style: normal;
   text-align: center;
-  margin-bottom: 60px;
+  // margin-bottom: 60px;
 }
 
 .footer__contacts--white {
@@ -93,9 +93,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 60px;
   // margin-left: 93px;
   width: 100%;
-  height: 86px;
+  // height: 86px;
 
   @media screen and (min-width: 1200px) {
     flex-direction: row;
@@ -174,7 +175,7 @@
 
 .sign {
   margin: 0;
-  margin-bottom: 60px;
+  // margin-bottom: 60px;
   margin-left: 12px;
   background: var(--excretion-color);
   border-color: var(--excretion-color);
