--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -10,14 +10,21 @@
       rgba(47, 48, 58, 0.4)
     ),
     url(../img/background-480.jpg);
-
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 480px) {
     background-image: linear-gradient(
         to right,
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
       url(../img/background-768.jpg);
+  }
+  @media screen and (min-width: 768px) {
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../img/background-1600.jpg);
   }
 
   @media screen and (min-width: 1200px) {
@@ -27,12 +34,12 @@
     padding-bottom: 200px;
     margin-left: auto;
     margin-right: auto;
-    background-image: linear-gradient(
-        to right,
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-      ),
-      url(../img/background-1600.jpg);
+    // background-image: linear-gradient(
+    //     to right,
+    //     rgba(47, 48, 58, 0.4),
+    //     rgba(47, 48, 58, 0.4)
+    //   ),
+    //   url(../img/background-1600.jpg);
   }
 }
 .hero__title {
