--- a/sass/layout/_filter.scss
+++ b/sass/layout/_filter.scss
@@ -1,41 +1,45 @@
-
 .filter__item:not(:last-child) {
   margin-right: 10px;
 
-   @media screen and (max-width:480px) {
-margin-bottom: 15px;
-   }
+  @media screen and (max-width: 480px) {
+    margin-bottom: 15px;
+  }
 
-    @media screen and (min-width:768px){
-      margin-right: 8px;
-    }
+  @media screen and (min-width: 768px) {
+    margin-right: 8px;
+  }
 }
 
-.filter__item:not(:nth-child(n+4)){
-
-  @media screen and (min-width:480px) {
+.filter__item:not(:nth-child(n + 4)) {
+  @media screen and (min-width: 480px) and (max-width: 767px) {
     margin-bottom: 15px;
   }
 }
 
-.filter {
+// .filter {
 
-  padding-top: 60px;
-  padding-bottom: 40px;
+//   padding-top: 60px;
+//   padding-bottom: 40px;
 
-  @media screen and (min-width:1200px) {
-    padding-top: 94px; 
-    padding-bottom: 50px;
-  }
-}
+//   @media screen and (min-width:1200px) {
+//     padding-top: 94px;
+//     padding-bottom: 50px;
+//   }
+// }
 
 .filter__list {
   display: flex;
   flex-wrap: wrap;
+  padding-bottom: 40px;
 
-   @media screen and (min-width:768px){
-     justify-content: center;
-   }
+  @media screen and (min-width: 768px) {
+    justify-content: center;
+    padding-bottom: 30px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 50px;
+  }
   // justify-content: start;
   // margin-bottom: 50px;
 }
