--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -26,6 +26,10 @@
   text-align: center;
   // padding-bottom: 60px;
 
+  @media screen and (max-width: 767px) {
+    padding-top: 60px;
+  }
+
   @media screen and (min-width: 1200px) {
     margin-left: 70px;
   }
