--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -3,13 +3,12 @@
   // display: flex;
   align-items: center;
   /* border-bottom: 1px solid #ececec; */
-@media screen and (min-width:768px) {
-  display: block;
-  display: flex;
-  align-items: center;
-  /* border-bottom: 1px solid #ececec; */
-}
-
+  @media screen and (min-width: 768px) {
+    display: block;
+    display: flex;
+    align-items: center;
+    /* border-bottom: 1px solid #ececec; */
+  }
 }
 
 .main-nav {
@@ -80,14 +79,21 @@
 .cont__list {
   margin-left: auto;
 
-  @media screen and (max-width:1200px){
-  flex-direction: column;
-}
+  @media screen and (max-width: 1200px) {
+    flex-direction: column;
+  }
 }
 
 .cont__item:first-child {
-  @media screen and (min-width:1200px) {
-     margin-right: 32px;
+  @media screen and (min-width: 1200px) {
+    margin-right: 32px;
   }
- 
+}
+
+.header-decoration {
+  border: 1px solid #ececec;
+
+  @media screen and (min-width: 1200px) {
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
 }
