--- a/sass/layout/_projects.scss
+++ b/sass/layout/_projects.scss
@@ -1,7 +1,17 @@
-.projects {
+// .projects {
+//   padding-bottom: 60px;
+
+//   @media screen and (min-width: 1200px) {
+//     padding-bottom: 94px;
+//   }
+// }
+
+.projects-page {
+  padding-top: 60px;
   padding-bottom: 60px;
 
   @media screen and (min-width: 1200px) {
+    padding-top: 94px;
     padding-bottom: 94px;
   }
 }
